# distro-work

./: .gitignore  .zshrc  README.md  SECURITY.md  bootstrap.sh  deploy.sh  install.sh
.config/fuzzel/: fuzzel.ini
.config/kitty/: kitty.conf
.config/lazygit/: config.yml
.config/niri/: config.kdl
.config/noctalia/: settings.json
.config/nvim/lua/plugins/: colorscheme.lua
.config/opencode/: agents.json  opencode.json
.config/systemd/user/: hexstrike-server.service  llama-crow9b.service
.config/telia/: config.toml
.config/tmux/: tmux.conf
.config/tmux/scripts/: mem.sh
.github/workflows/: lint.yml
etc/systemd/system/: sddm-noctalia-sync.path  sddm-noctalia-sync.service
installer/: Cargo.toml
installer/src/: deploy.rs  main.rs  packages.rs
