[package]
name = "niri-installer"
version = "0.1.0"
edition = "2021"
description = "Rust port of install.sh: Arch + BlackArch package bootstrap for niri-dotfiles."
license = "MIT"

[dependencies]
anyhow = "1"

[[bin]]
name = "niri-install"
path = "src/main.rs"

[profile.release]
strip = true
lto = "thin"
